syntax = "proto3";

option go_package = "go-api-grpc/pb/account";

package account;

service Account {
  rpc Create (CreateRequest) returns (Response) {}
  rpc List (ListRequest) returns (ResponseList) {}
}

message CreateRequest {
  string UserID = 1;
  double Balance = 2;
  string Currency = 3;
}

message ListRequest {
  string UserID = 1;
}

message Response {
  string ID = 1;
  string UserID = 2;
  double Balance = 3;
  string Currency = 4;
}

message ResponseList {
  repeated Response Data = 1;
}